<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".Fragments.CalculateFragment"
             android:background="@color/darkBack">

    <EditText
            android:focusable="true"
            android:nextFocusUp="@+id/tvUnit"
            android:id="@+id/tvCourseName"
            android:hint="@string/CourseName"
            android:fontFamily="@font/far_mitra"
            android:gravity="center"
            android:background="@drawable/edit_text_background"
            android:textColor="@color/red_active"
            android:textColorHint="@color/red_inactive"
            android:inputType="text"
            android:layout_width="125dp"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/radioGroup" app:layout_constraintVertical_bias="0.968"
            app:layout_constraintStart_toEndOf="@+id/tvUnit" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:id="@+id/tvUnit"
            android:focusable="true"
            android:fontFamily="@font/far_mitra"
            android:hint="@string/Unit"
            android:nextFocusLeft="@+id/tvStuNumber"
            style="@style/EditText"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="20dp" app:layout_constraintBottom_toTopOf="@+id/radioGroup"
    />
    <EditText

            android:id="@+id/tvStuNumber"
            android:focusable="true"
            android:nextFocusDown="@+id/button"
            android:fontFamily="@font/far_mitra"
            android:hint="@string/stuNumber"
            style="@style/EditText"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/radioGroup"
            app:layout_constraintVertical_bias="0.968" app:layout_constraintEnd_toStartOf="@+id/tvUnit"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="1.0"/>

    <TextView
            android:id="@+id/tvResult"
            android:fontFamily="@font/far_mitra"
            android:textAlignment="center"
            android:textColor="@color/green_bg_light"
            android:text=""
            android:textSize="100sp"
            android:layout_width="268dp"
            android:layout_height="230dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintBottom_toBottomOf="@+id/textbackground"
            app:layout_constraintTop_toTopOf="@+id/textbackground" app:layout_constraintVertical_bias="0.609"/>
    <TextView
            android:id="@+id/textbackground"
            android:background="@drawable/calculate_result_textview_background"
            android:textAlignment="center"
            android:textColor="@color/red_active"
            android:text=""
            android:textSize="100sp"
            android:layout_width="match_parent"
            android:layout_height="312dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/tvUnit" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.452"/>

    <RadioGroup

            android:orientation="horizontal"
            android:layout_width="378dp" android:layout_height="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/button"
            android:id="@+id/radioGroup"
            app:layout_constraintHorizontal_bias="0.444" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.894">

        <RadioButton
                android:fontFamily="@font/far_mitra"
                android:id="@+id/proRadio"
                style="@style/EditText"
                android:textAlignment="center"
                android:checked="true"
                android:layout_width="108dp"
                android:layout_height="wrap_content"
                android:text="@string/professional"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.935"
                app:layout_constraintVertical_bias="0.749"/>
        <RadioButton
                android:fontFamily="@font/far_mitra"
                android:id="@+id/genRadio"
                style="@style/EditText"
                android:textAlignment="center"
                android:layout_width="108dp"
                android:layout_height="wrap_content"
                android:text="@string/general"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.935"
                app:layout_constraintVertical_bias="0.815"/>

        <RadioButton
                android:fontFamily="@font/far_mitra"
                android:id="@+id/masterRadio"
                style="@style/EditText"
                android:textAlignment="center"
                android:layout_width="108dp"
                android:layout_height="wrap_content"
                android:text="@string/Master"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.935"
                app:layout_constraintVertical_bias="0.815"/>
    </RadioGroup>




    <Button
            android:text="@string/Calculation"
            android:fontFamily="@font/far_mitra"
            android:id="@+id/button"
            style="@style/CalculateButton"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"

            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.851"/>


</android.support.constraint.ConstraintLayout>